# Emscripten_OpenGL

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .gitmodules  .travis.yaml  .travis.yml  CMakeLists.txt  Dockerfile  README.md  TODO  appveyor.yaml  appveyor.yml  config.yaml  docker-compose.yaml  execapp.sh  execbuild.sh  exectests.sh  info.txt  requirements.txt
application/: entry.py  main.cxx
application/configloader/: CMakeLists.txt
application/configloader/dependencies/lib_sources/yamlprsr/: CMakeLists.txt
application/configloader/dependencies/yamlparser/lib/msvc/: yaml-cppd.lib
application/configloader/dependencies/yamlprsr/: CMakeLists.txt
application/configloader/includes/: config.h  globals.h
application/configloader/sources/: config.cpp
application/dependencies/ASSIMP/: CMakeLists.txt
application/dependencies/ASSIMP/lib/msvc/: assimp-vc142-mtd.lib
application/dependencies/GLEW/lib/msvc/: glewd.lib
application/dependencies/SOIL2/: CMakeLists.txt  premake4.lua
application/dependencies/SOIL2/lib/msvc/: soil2.lib
application/dependencies/SOIL2/src/test/: test_SOIL2.cpp
application/dependencies/assimp_libs/lib/windows/: assimp-vc142-mtd.exp
application/dependencies/lib_sources/ASSIMP/code/: CMakeLists.txt  excludeexporters.cmake  excludeimporters.cmake
application/dependencies/lib_sources/GLEW/: CMakeLists.txt
application/dependencies/lib_sources/GLFW/: CMakeLists.txt
application/dependencies/lib_sources/SOIL2/: CMakeLists.txt  premake5.lua
application/includes/: application.h  camera.h  filedialog.h  globals.h  light.h  mesh.h  model.h  shader.h  texture.h  vertex.h
application/sources/: application.cpp  camera.cpp  filedialog.cpp  light.cpp  mesh.cpp  model.cpp  shader.cpp  texture.cpp
application/tests/: CMakeLists.txt  configloader_test.cpp  configloader_test.hpp  main.cxx
application/tests/badconfig/: bconfig1.yaml  bconfig3.yaml
application/tests/config/: appconfig.yaml
assets/models/: mpm_f21__Apple_MacBook_Pro_15.mtl
assets/shaders/: core.frag  core.vs  core.wfrag  core.wvs  lamp.frag  lamp.wfrag  lamp.wvs
cmake/Modules/: Findglfw3.cmake  configloader.cmake  copydlls.cmake  graphics.cmake  groupfunctions.cmake  safeguard.cmake  setflags.cmake  yamlparser.cmake
config/: appconfig.yaml  servconfig.yaml
doc/instructions/: instructions.tex
doc/russian/description/: cmake.aux  cmake.fdb_latexmk  cmake.fls  cmake.out  cmake.tex  cmake.toc
doc/russian/description/_minted-cmake/: 1DD38471F15BC9C0FE8CA23D08AEDB8358EAE98BBDB9748E0FC35F8F46203E8F.pygtex  ADC4475BB6983E9C1BB0FEA1ECECA23DFF7D3FC3DA782DBF676D00097F43A976.pygtex
doc/russian/instructions/: instructions.aux  instructions.fdb_latexmk  instructions.fls  instructions.out  instructions.soc  instructions.tex  instructions.toc
doc/russian/instructions/_minted-instructions/: 9A746168CE619B3E09BC1D874FBE5811881E700045371E6D003D50860C7153B0.pygtex
doc/russian/report/: report.tex  reportp2.aux  reportp2.fdb_latexmk  reportp2.fls  reportp2.out  reportp2.synctex(busy)  reportp2.tex  reportp2.toc
doc/russian/report/_minted-report/: 06E2675233299DD4C20748C3FC8BBB54B4F76827DC6EA37C31338E0FB0C5FAA8.pygtex  271FA38180DE59D40B4ABDC01FA822972FBEDC7CAD2B0D5A103074C13C1F036D.pygtex  4190E63EB96341821AFCA284DA5772BBE48BF8F75E13A5192D1E6A4F9AF90D36.pygtex  5FCB76CF9657C2A00BFC3CC622263B80B4F76827DC6EA37C31338E0FB0C5FAA8.pygtex  90D0883268F7B98152FD087555D2C605B4F76827DC6EA37C31338E0FB0C5FAA8.pygtex  A0D917995F0B89D313EF6E71088C35DBB4F76827DC6EA37C31338E0FB0C5FAA8.pygtex  A466681C10720625971E2B71C075739DB4F76827DC6EA37C31338E0FB0C5FAA8.pygtex  D8D44EC37AC684D86FDFBCE03D574C9AB4F76827DC6EA37C31338E0FB0C5FAA8.pygtex  E148CA461D4417985CFD2ED87246C9FDB4F76827DC6EA37C31338E0FB0C5FAA8.pygtex  EBEAFABE941D6E1F52735BD62174A264B4F76827DC6EA37C31338E0FB0C5FAA8.pygtex  F7128684019BD17C2CA3B586C00F709F8172A6D12371E8D18D7577EB5195B601.pygtex  F838E6B25C8E594CE75761FCD37D5C96A495E9479E222FF6F43EE125B1F003E6.pygtex
doc/russian/report/_minted-reportp2/: 58EA4A139D300B54790FCEEE776E94E18F4FC8A68EDB18717177B8F8D7DF7B7D.pygtex  63FCB4473C66C92540863723E8653D998F4FC8A68EDB18717177B8F8D7DF7B7D.pygtex  8E2B6E34904F67F5C9C9C2048D2739E58F4FC8A68EDB18717177B8F8D7DF7B7D.pygtex  9554830307AF028E72E1BD60338F90678F4FC8A68EDB18717177B8F8D7DF7B7D.pygtex  A1BD4C46D0DC826211D54EFDA87984678F4FC8A68EDB18717177B8F8D7DF7B7D.pygtex  B8F994A06A3649BEE92DEC20461EF35C8F4FC8A68EDB18717177B8F8D7DF7B7D.pygtex  CBAA42F7F7D654DAC2E1F61304505BC88F4FC8A68EDB18717177B8F8D7DF7B7D.pygtex  E240ECBA64A558B38C22CC21382F9B5A8F4FC8A68EDB18717177B8F8D7DF7B7D.pygtex  FB8366C5E28DA5D047EC2BC26257819B8F4FC8A68EDB18717177B8F8D7DF7B7D.pygtex
doc/russian/report/cmakes/: exe.txt  modules.txt  setlibs.txt  setsrc.txt
